--- a/alternatives/server-micronaut-java/Dockerfile
+++ b/alternatives/server-micronaut-java/Dockerfile
@@ -2,8 +2,16 @@
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 ARG SERVICE_DIR=.
 RUN apk add --update-cache rsync # rsync for windows devs
+ENV NODE_ENV development
 RUN mkdir -p /service
 WORKDIR /service
+
+RUN mkdir -p shared
+COPY ${SERVICE_DIR}/shared/package.json \
+     ${SERVICE_DIR}/shared/package-lock.* \
+     /service/shared/
+RUN (cd shared && npm install --loglevel warn)
+
 COPY ${SERVICE_DIR} /service
 # ENV GRADLE_OPTS "--project-cache-dir /.gradle"
 RUN ./gradlew
