--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -3,12 +3,19 @@
 FROM node:lts-alpine
 ARG SERVICE_DIR=.
 RUN apk add --update-cache rsync # rsync for windows devs
+ENV NODE_ENV development
 RUN mkdir -p /service
 WORKDIR /service
-ENV NODE_ENV development
+
+RUN mkdir -p shared
+COPY ${SERVICE_DIR}/shared/package.json \
+     ${SERVICE_DIR}/shared/package-lock.* \
+     /service/shared/
+RUN (cd shared && npm install --loglevel warn)
+
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
      /service/
 RUN npm install --loglevel warn
 EXPOSE 8080
-CMD eval $DC_COMMAND; npm install; npm run start
+CMD eval $DC_COMMAND; (cd shared && npm install); npm install; npm run start
