--- a/worker/Dockerfile.build
+++ b/worker/Dockerfile.build
@@ -3,13 +3,20 @@ FROM node:lts-alpine as builder
 ARG SERVICE_DIR=.
 ARG TARGET_ENV=prod
 RUN apk add --update-cache build-base python git fontconfig
+ENV NODE_ENV development
 RUN mkdir -p /service
 WORKDIR /service
+
+RUN mkdir -p shared
+COPY ${SERVICE_DIR}/shared/package.json \
+     ${SERVICE_DIR}/shared/package-lock.* \
+     /service/shared/
+RUN (cd shared && npm install --loglevel warn)
+
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
      /service/
 ENV TARGET_ENV ${TARGET_ENV}
-ENV NODE_ENV development
 RUN npm ci --loglevel warn
 COPY ${SERVICE_DIR} /service
 RUN npm run lint
