--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -7,15 +7,9 @@ ENV NODE_ENV development
 RUN mkdir -p /service
 WORKDIR /service
 
-RUN mkdir -p shared
-COPY ${SERVICE_DIR}/shared/package.json \
-     ${SERVICE_DIR}/shared/package-lock.* \
-     /service/shared/
-RUN (cd shared && npm install --loglevel warn)
-
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
      /service/
 RUN npm install --loglevel warn
 EXPOSE 8080
-CMD eval $DC_COMMAND; (cd shared && npm install); npm install; npm run start
+CMD eval $DC_COMMAND; npm install; npm run start
