chore: remove obsolete libs from server, update all package-lock.json files

--- a/server/package.json
+++ b/server/package.json
@@ -19,18 +19,14 @@
     "boom": "7.3.0",
     "bunyan": "^1.8.14",
     "koa": "^2.13.0",
-    "koa-basic-auth": "4.0.0",
     "koa-joi-router": "^6.0.2",
     "koa-qs": "^3.0.0",
-    "lodash": "4.17.15",
-    "moment": "^2.27.0",
-    "moment-timezone": "^0.5.31",
+    "lodash": "^4.17.15",
     "mustache": "^4.0.1",
     "pg-promise": "^10.5.7",
     "serverless-http": "^2.5.0",
     "showdown": "^1.9.1",
     "stack-trace": "0.0.10",
-    "unescape": "1.0.1",
     "uuid": "^8.2.0"
   },
   "resolutions": {
@@ -44,11 +40,9 @@
     "@types/jest": "^26.0.3",
     "@types/joi": "^14.3.4",
     "@types/koa": "^2.11.3",
-    "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.157",
-    "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "^4.0.1",
     "@types/node": "^14.0.14",
     "@types/pg": "^7.11.0",
