--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "@sentry/node": "^5.19.0",
     "aws-sdk": "^2.709.0",
     "axios": "^0.19.2",
-    "boom": "7.3.0",
+    "@hapi/boom": "^9.1.0",
     "bunyan": "^1.8.14",
     "koa": "^2.13.0",
     "koa-joi-router": "^6.0.2",
@@ -33,10 +33,7 @@
     "qs": "~6.3.2"
   },
   "devDependencies": {
-    "@types/boom": "7.3.0",
     "@types/bunyan": "1.8.6",
-    "@types/cheerio": "^0.22.13",
-    "@types/co-body": "^5.1.0",
     "@types/jest": "^26.0.3",
     "@types/joi": "^14.3.4",
     "@types/koa": "^2.11.3",
@@ -51,7 +48,6 @@
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
-    "cheerio": "1.0.0-rc.3",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
@@ -63,7 +59,7 @@
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.1",
-    "ts-node-dev": "1.0.0-pre.40",
+    "ts-node-dev": "1.0.0-pre.52",
     "typescript": "^3.9.6"
   }
 }
