--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^26.0.3",
     "@types/joi": "^14.3.4",
     "@types/koa": "^2.11.3",
+    "@types/koa-joi-router": "^5.2.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.157",
