feat: set defaults for mandatory GUI env vars, rearrange dockerfiles

--- a/alternatives/server-micronaut-java/Dockerfile.build
+++ b/alternatives/server-micronaut-java/Dockerfile.build
@@ -1,9 +1,10 @@
 # Builder and tester container for production build
 FROM adoptopenjdk/openjdk11-openj9:alpine-slim as builder
-ARG SERVICE_DIR=.
+
 RUN mkdir -p /service
 WORKDIR /service
 
+ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR} ./
 RUN ./gradlew build
 
@@ -12,12 +13,14 @@ LABEL version=${BUILD_VERSION} \
       company=sandbox \
       project=sandbox-jukka6 \
       role=server
-ENV BUILD_VERSION ${BUILD_VERSION}
 RUN mkdir -p /service
 WORKDIR /service
 COPY --from=builder /build/libs/*.jar server.jar
 RUN addgroup -S micronaut && \
     adduser -S -D -G micronaut micronaut
+
+ARG BUILD_VERSION
+ENV BUILD_VERSION ${BUILD_VERSION}
 USER micronaut
 EXPOSE 8080
 # TODO: how to use secrets file in application.yml. just replace?
