--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -2,23 +2,27 @@
 # NOTE: Use the same cypress version both in Dockerfile and package.json to
 #       avoid unnecessary cypress download
 FROM taitounited/cypress:4.9.0 as builder
-ARG SERVICE_DIR=.
-ARG TARGET_ENV=prod
-ARG BUILD_VERSION
-ENV NODE_ENV development
+
 RUN mkdir -p /service
 WORKDIR /service
 
+ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
      /service/
-ENV TARGET_ENV ${TARGET_ENV}
-ENV BUILD_VERSION ${BUILD_VERSION}
+
+ENV NODE_ENV development
+RUN npm ci --loglevel warn
+
+COPY ${SERVICE_DIR} /service
+
+ENV BASE_PATH BASE_PATH
+ENV ASSETS_PATH ASSETS_PATH
+ENV ASSETS_DOMAIN ASSETS_DOMAIN
 ENV API_ROOT ''
 ENV API_URL /api
 ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
-RUN npm ci --loglevel warn
-COPY ${SERVICE_DIR} /service
+
 RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
 
