--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -21,5 +21,6 @@ COPY ${SERVICE_DIR}/hooks.json \
 RUN npm run install-site
 
 # Start development
+ENV DEV_PORT 8080
 EXPOSE 8080
 CMD eval $DC_COMMAND; . ~/.bashrc && ./develop.sh
